--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -16,8 +16,8 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698517.md#1" target="_blank">“豫章书院事件”持续 成都与北京再曝虐童案</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698517.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2-4-150x120.jpg" align ="left"></a>江西南昌虐打体罚学生事件在两年前曝光之后，该事件还未得到彻底解决，志愿者与爆料人纷纷受到威胁之际，近日，北京明声听力康复中心与四川成都嘉年华青少年心理辅导中心也被爆虐童。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11697489.md#1" target="_blank">中共拒美舰停港 专家：或助台美军事交流</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11697489.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/413f33f09a1dbc76a995c905336bf096-150x120.jpg" align ="left"></a>中共外交部表示，将拒绝美国舰船和军机停靠香港的申请。有美国的军事专家分析，中共这么做，将会使得台湾与美国间的军事关系提升，美国将寻找更加可靠的补给港口，而台湾会是一个备受支持的选项。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11696287.md#1" target="_blank">高以翔骤逝事件为何令赵丽颖意外登上热搜？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11696287.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/zhaoliying-150x120.jpg" align ="left"></a>台湾艺人高以翔拍摄浙江卫视《追我吧》节目时骤逝，年仅35岁，令无数人唏嘘不已。在外界对事故的检视和反思中，大陆女星赵丽颖竟然因早前参加浙江卫视《跑男》节目时差点溺亡的情节登上热搜，并引发大陆作家刘信达在微博对赵丽颖喊话：“你敢不敢为高以翔讨回公道？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694142.md#1" target="_blank">台北101成共谍大本营？ 学者：代号小香港</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1808231139272378-150x120.jpg" align ="left"></a>自称是中国间谍的男子王立强投诚澳洲后，爆出中共如何渗透台湾，以及特务在港台间的布线网，绑架异议人士等，引发各界讨论。特别的是，被视为台湾地标的台北101则被爆出是共谍出入大本营。学者分析，根据国安单位长期掌握的情资显示，台北101早被视为红色势力根据地，代号为“小香港”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 2:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695361.md#1" target="_blank">台肥借贷韩国瑜买房案 农委会提6疑点移送北检</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/56cee228550dbd9e2e281fa6588e4bbb-150x120.jpg" align ="left"></a>日前媒体报导，国民党总统候选人、高雄市长韩国瑜向台肥公司贷款，购买北市“R5无双─日升月恒”预售屋建案，台肥最大股东农委会也在2日召开记者会，由农委会副主委陈骏季对外说明案件的6项疑点，检附相关资料移请台北地检署及相关业务主管机关进行调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 11:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706777.md#1" target="_blank">每日三退声明精选（2019/12/06）</a><br></h3>我是一位居住于四川的农民，曾经经历过土改，大跃进，等疯狂的红色运动，曾经被打为地富反坏右，被多人围殴，游街示众，后来虽然进行了平反，但多年内心一直过不了这个坎，总觉得又气又怕。今年是个多事之年，大事件的接连发生表明共产党体制的摇摇欲坠，希望在我有生之年能看见邪党倒台，感谢大纪元给了我一个吐露自己心声的机会，我在这里自愿宣布退出中国共产党的一切组织机构，三退保.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:53 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706646.md#1" target="_blank">河南20岁女大学生失踪5日 男同事承认杀人</a><br></h3>河南洛阳20岁的女大学生狄含笑失踪多日后，目前，其兼职的男同事李某已承认将她杀害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705391.md#1" target="_blank">赴白宫见川普 郭台铭：谈美中贸易与经济</a><br></h3>鸿海创办人郭台铭与太太曾馨莹在美东时间5日傍晚参加白宫耶诞派对，入场前说，今天是参加派对的心情，不愿谈台湾政治。在会后受访时表示，有见到美国总统川普，对于谈话内容“还是保密”，但透露听了一些川普对于经济、中美贸易、鸿海在美国投资等议题的看法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704422.md#1" target="_blank">石家庄一中学教练被家长刺死 曾是省男排主力</a><br></h3>近日，石家庄一所重点中学的男排主教练、前河北男排主力二传手马某，被一位队员家长杀害。初步调查，原因是该家长与马某在对孩子训练问题产生矛盾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703047.md#1" target="_blank">江苏男子掐死8岁亲生儿子 网民吁严惩</a><br></h3>大陆乱象万千。近期，江苏宿迁一名男子朱某杀害自己刚满8岁的儿子，而后却辩称儿子身体不好，帮他解脱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:43 AM							</td></tr>
